# bleinfrared-qml

./: .gitignore  CMakeLists.txt  Main.qml  commander.cpp  commander.h  main.cpp  settings.cpp  settings.h
